Seccion de animes destacados y recomendaciones

--- a/index.html
+++ b/index.html
@@ -7,6 +7,41 @@
     <link rel="shortcut icon" href="./img/icon-anime.png.png" type="image/x-icon">
 </head>
 <body>
-    
+    <header>
+        <h1>El mundo del Amine</h1>
+        <nav>
+            <ul>
+                <li>
+                     <a href="#inicio">Inicio</a>
+                </li>
+                <li>
+                    <a href="#Animes">Animes Populares</a>
+                </li>
+                <li>
+                    <a href="#Noticias">Noticias</a>
+                </li>
+                <li>
+                    <a href="contacto">Contacto</a>
+                </li>
+            </ul>
+        </nav>
+    </header> 
+    <main>
+        <section>
+            <h2>Animes Descados</h2>
+            <img 
+            src="./img/Berserk.jpg" width="350" 
+            alt="Wallpaper Berserk"
+            >
+            <h3>Animes Recomendados:</h3>
+            <ul>
+                <li>Berserk</li>
+                <li>Jujutsu Kaisen</li>
+                <li>Naruto</li>
+                <li>Over Lord</li>
+                <li>Hunter X Hunter</li>
+            </ul>
+        </section>
+    </main>
 </body>
 </html>
